# systematic-trading-lab

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  manual-historical-backtest.yml  scheduled-backtest.yml
configs/: momentum-demo.yml  momentum-sma-exit.yml  momentum-spy-history.yml  momentum-spy-no-take-profit.yml  momentum-spy-no-time-exit.yml  momentum-spy-open-ended.yml  momentum-spy-trend-exit.yml  momentum-yahoo.yml
data/samples/: demo_ohlcv.csv
src/trading_lab/: __init__.py  __main__.py  cli.py  config.py
src/trading_lab/backtest/: reporting.py  runner.py
src/trading_lab/data/: base.py  csv_provider.py  yahoo_provider.py
src/trading_lab/risk/: rules.py
src/trading_lab/strategies/: base.py  momentum_breakout.py
tests/: test_config_and_runner.py  test_data.py  test_execution.py  test_reporting_analytics.py  test_strategy.py
